# openai_mcp_jp

./: CLAUDE.md  CLAUDE_jp.md  Dockerfile.api  README.md  README_setup.md  config.yml  data.py  docker-compose.api.yml  fastapi_mcp_api_server_postgres.py  fastapi_mcp_postgresql.py  helper_api.py  helper_mcp.py  helper_mcp_pages.py  mcp_api_client.py  mcp_api_server.py  mcp_api_streamlit_app.py  mcp_db_show_data.py  mcp_elasticsearch.py  mcp_postgresql.py  mcp_qdrant.py  mcp_qdrant_show.py  openai_api_mcp_sample.py  pyproject.toml  quick_test.py  requirements.txt  server.py  setup_env.sh  setup_sample_data.py  start_api.sh
README_doc/: README_api.md  README_claude_code.md  README_claude_code_in_japanese.md  README_claude_code_sample.md  README_setup.md
assets/: product_embeddings.csv
check_server/: check_qdrant.sh  qdrant_diagnostic.py  setup_api.py  setup_sample_data.py  setup_test_data.py
doc/: cookbook_list.csv  doc_list.txt  howto_start.md  mcp_api_client_design.md  mcp_api_server_design.md  mcp_db_show_data.md  mcp_elasticsearch.md  mcp_postgresql.md  mcp_qdrant.md  readme_dataset.md  readme_howto_create_enc.md  readme_uv_install.md  setup_data_server.md  setup_procedure.md  setup_test_data_doc.md  テスト計画書_a10_00_openai_skeleton.md
docker-compose/: docker-compose.mcp-demo.yml  docker-compose.mcp-simple.yml  memo.txt
