[project]
name = "openai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "elasticsearch>=9.1.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]
